完善控制组件、修改demo、新增导航功能

--- a/src/index.html
+++ b/src/index.html
@@ -5,59 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>canvas - demo</title>
-    <link rel="stylesheet" href="./style/control.css">
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-
-      body {
-        background-color: #f1f1f1;
-      }
-
-      h4 {
-        border-left: 8px solid #2196f3;
-        padding: 8px 0;
-        text-indent: 2em;
-      }
-
-      #root {
-        max-width: 600px;
-        min-width: 400px;
-        margin: 0 auto;
-        padding: 20px;
-        box-sizing: border-box;
-      }
-
-      .soft {
-        border-radius: 8px;
-        background-color: #f1f1f1;
-        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px #fff;
-      }
-
-      .card {
-        margin: 20px auto;
-        padding: 8px;
-        overflow: hidden;
-      }
-
-      #canvas {
-        display: block;
-        margin: 0 auto;
-        background-color: #153655;
-        border-radius: 8px;
-      }
-    </style>
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/control.css" />
   </head>
   <body>
-    <div id="root">
-      <h4 id="title" class="soft">canvas - demo</h4>
-      <div class="card soft">
-        <canvas id="canvas"></canvas>
-      </div>
-    </div>
-
+    <div id="root"></div>
     <script src="./app.js"></script>
   </body>
 </html>
